gdu volume monitor: Handle gdu_pool_new() returning NULL gracefully

https://bugzilla.gnome.org/show_bug.cgi?id=582579